<resources>
    <!-- Generics -->
    <string name="app_logo">SmartPlant Логотип</string>
    <string name="app_name">SmartPlant</string>
    <string name="on">Включён</string>
    <string name="turn_on">Включить</string>
    <string name="off">Выключен</string>
    <string name="turn_off">Выключить</string>

    <!-- Icon descriptions -->
    <string name="temperature_icon_description">Температура</string>

    <!-- Application status codes-->
    <string name="auth_failed">Ошибка авторизации</string>
    <string name="internal_server_error">Неизвестная ошибка сервера</string>

    <string name="code_not_specified">@string/internal_server_error</string>
    <string name="code_success">Успех</string>
    <string name="code_created">Создано</string>
    <string name="code_updated">Обновлено</string>

    <string name="code_internal_server_error">@string/internal_server_error</string>
    <string name="code_already_exists">Уже существует</string>
    <string name="code_not_found">Не найдено</string>
    <string name="code_unprocessable_entity">@string/internal_server_error</string>
    <string name="code_time_out">Время ожидания истекло</string>
    <string name="code_bad_request">@string/internal_server_error</string>
    <string name="code_forbidden">Доступ запрещён</string>

    <string name="code_authorization_not_specified">@string/auth_failed</string>
    <string name="code_authorization_invalid">@string/auth_failed</string>
    <string name="code_authorization_type_unknown">@string/auth_failed</string>
    <string name="code_token_not_specified">@string/auth_failed</string>
    <string name="code_token_expired">@string/auth_failed</string>
    <string name="code_token_invalid">@string/auth_failed</string>
    <string name="code_token_validation_failed">@string/auth_failed</string>
    <string name="code_unknown_user">Ошибка авторизации: пользователь не найден</string>
    <string name="code_wrong_auth_credentials">Неверные учетные данные</string>

    <string name="code_invalid_user_or_device">Неверный пользователь или устройство</string>
    <string name="code_already_has_owner">У этого устройства уже есть владелец</string>
    <string name="code_cross_network_request">@string/internal_server_error</string>
    <string name="code_pair_request_accepted">Запрос на подключение принят</string>
    <string name="code_pair_request_rejected">Запрос на подключение отклонен</string>

    <string name="code_invalid_storage_request">@string/internal_server_error</string>
    <string name="code_invalid_response_data_message">@string/internal_server_error</string>

    <!-- NavBar -->
    <string name="my_devices">Мои устройства</string>
    <string name="settings">Настройки</string>
    <string name="notifications">Уведомления</string>

    <!-- Start screen -->
    <string name="welcome">Добро пожаловать в SmartPlant</string>
    <string name="welcome_description">Ваш помощник по уходу за растениями</string>

    <!-- Auth screen -->
    <string name="login_action">Войти</string>
    <string name="login">Вход</string>
    <string name="register_action">Зарегистрироваться</string>
    <string name="register">Регистрация</string>
    <string name="auth">Авторизация</string>
    <string name="username">Имя пользователя</string>
    <string name="password">Пароль</string>
    <string name="password_confirmation">Подтверждение пароля</string>
    <string name="user_already_exist">Пользователь с таким именем уже существует</string>
    <string name="wrong_auth_credentials">Неверное имя пользователя или пароль</string>

    <!-- Devices screen -->
    <string name="add_device">Добавить устройство</string>

    <!-- Device detail screen -->
    <string name="device_management">Управление устройством</string>
    <string name="device_title">Название устройства</string>
    <string name="device_description">Описание устройства</string>
    <string name="plant_image">Растение</string>
    <string name="default_device_description">Устройство SmartPlant</string>
    <string name="loading_with_dots">Загрузка...</string>
    <string name="sensor_data">Данные датчика</string>
    <string name="illumination_settings">Настройки освещения</string>
    <string name="irrigation_settings">Настройки полива</string>
    <string name="irrigate">Полить</string>
    <string name="turn_on_lamp">Включить освещение</string>
    <string name="turn_off_lamp">Выключить освещение</string>
    <string name="code_not_changed">Не изменено</string>
    <string name="transfer_server_ip_setting_title">IP</string>
    <string name="network_settings">Transfer-Сервер</string>
    <string name="network_settings_description">Данные сервера для передачи данных на устройство</string>
    <string name="transfer_server_port_setting_title">Порт</string>
    <string name="saved_successfully">Успешно сохранено</string>
    <string name="devices_settings">Устройства</string>

    <!-- Settings -->
    <string name="data_update_interval_setting">Интервал обновления данных устройства</string>
    <string name="additional_settings">Дополнительные настройки</string>
    <string name="transfer_server_token_type">Тип токена авторизации</string>
    <string name="transfer_server_base_url">Базовый URL</string>

    <!-- Notifications -->
    <string name="high_humidity_default_title">Высокая влажность воздуха</string>
    <string name="high_humidity_default_description">Уровень влажности воздуха слишком высокий. Проветрите помещение или включите осушитель для поддержания оптимальных условий роста.</string>

    <string name="low_humidity_default_title">Низкая влажность воздуха</string>
    <string name="low_humidity_default_description">Уровень влажности воздуха слишком низкий. Используйте увлажнитель или опрыскайте растение для поддержания оптимальных условий роста.</string>

    <string name="too_dark_default_title">Слишком темно</string>
    <string name="too_dark_default_description">Растению недостаточно света. Включите дополнительное освещение для улучшения условий.</string>

    <string name="darkness_light_off_title">Слишком темно</string>
    <string name="darkness_light_off_description">Растение находится в темноте, а автоматическое освещение выключено. Включите свет для поддержания оптимальных условий роста.</string>

    <string name="too_bright_default_title">Слишком светло</string>
    <string name="too_bright_default_description">Слшиком светло. Переместите растение в тень или уменьшите интенсивность света.</string>

    <string name="wet_soil_default_title">Слишком влажный грунт</string>
    <string name="wet_soil_default_description">Грунт растения слишком влажный. Уменьшите полив, чтобы предотвратить гниение корней.</string>

    <string name="dry_soil_default_title">Слишком сухой грунт</string>
    <string name="dry_soil_default_description">Грунт растения слишком сухой. Полейте растение, чтобы восстановить необходимый уровень влаги.</string>

    <string name="dry_soil_no_water_title">Слишком сухой грунт</string>
    <string name="dry_soil_no_water_description">Грунт растения слишком сухой, а вода в устройстве закончилась. Пополните резервуар с водой и полейте растение.</string>

    <string name="dry_soil_irrigation_off_title">Слишком сухой грунт, а автоматический полив выключен</string>
    <string name="dry_soil_irrigation_off_description">Грунт растения слишком сухой, а автоматический полив выключен. Включите автоматический полив или полейте растение вручную.</string>

    <string name="high_temperature_default_title">Слишком высокая температура</string>
    <string name="high_temperature_default_description">Температура воздуха слишком высокая. Обеспечьте охлаждение помещения для поддержания оптимальных условий роста.</string>

    <string name="low_temperature_default_title">Слишком низкая температура</string>
    <string name="low_temperature_default_description">Температура воздуха слишком низкая. Обеспечьте обогрев помещения для поддержания оптимальных условий роста.</string>
    <string name="device">Устройство</string>
    <string name="has_no_notifications">Нет уведомлений</string>
    <string name="set_min">Указать минимум</string>
    <string name="set_max">Указать максимум</string>
    <string name="temperature">Температура</string>
    <string name="dialog_ok">Ок</string>
    <string name="dialog_cancel">Отмена</string>
    <string name="illumination">Освещение</string>
    <string name="soil_moisture">Влажность почвы</string>
    <string name="min_humidity">Минимальная влажность воздуха</string>
    <string name="max_humidity">Максимальная влажность воздуха</string>
    <string name="min_soil_moisture">Минимальная влажность почвы</string>
    <string name="max_soil_moisture">Максимальная влажность почвы</string>
    <string name="min_illumination">Минимальная освещенность</string>
    <string name="max_illumination">Максимальная освещенность</string>
    <string name="min_temperature">Минимальная температура</string>
    <string name="max_temparature">Максимальная температура</string>
    <string name="no_water_default_title">Закончилась вода</string>
    <string name="no_water_default_description">В устройстве закончилась вода. Пополните бак, чтобы использовать автополив</string>
    <string name="device_add">Добавление устройства</string>
    <string name="device_username">Имя устройства</string>
    <string name="send_device_add_request">Отправить запрос на сопряжение</string>
    <string name="specify_device_username">Укажите Username устройства, который можно найти в его web-настройках.</string>
    <string name="request_with_dots">Запрос...</string>
    <string name="failed_to_add_device">Не удалось добавить устройство</string>
    <string name="device_added_successfully">Устройство успешно добавлено</string>
    <string name="humidity">Влажность воздуха</string>
    <string name="water_level">Уровень воды</string>
</resources>