<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical">
    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/soil_moisture"
            android:textAlignment="center"
            android:textColor="@color/L1_text_primary"
            android:textStyle="bold"
            android:textSize="14sp"/>

    <com.github.mikephil.charting.charts.LineChart
            android:id="@+id/stat_data_line_chart"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_marginTop="10dp"/>

    <com.google.android.flexbox.FlexboxLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:flexDirection="row"
            app:justifyContent="space_between"
            android:layout_marginTop="10dp" >
        <com.smartplant.smartplantandroid.main.ui.items.button.CustomButton
                android:id="@+id/set_min_soil_moisture"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:text="@string/set_min"
                android:layout_marginEnd="2.5dp" />
        <com.smartplant.smartplantandroid.main.ui.items.button.CustomButton
                android:id="@+id/set_max_soil_moisture"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:text="@string/set_max"
                android:layout_marginStart="2.5dp" />
    </com.google.android.flexbox.FlexboxLayout>

    <com.smartplant.smartplantandroid.main.ui.items.button.CustomButton
            android:id="@+id/irrigate_button"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/irrigate"
            android:layout_marginTop="5dp" />
</LinearLayout>
