<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/startActivity"
        tools:context=".main.ui.views.start.StartActivity"
        android:background="@color/L1_background_primary">

    <com.google.android.flexbox.FlexboxLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#FFFFFF"
            app:flexDirection="column"
            app:justifyContent="space_between">

        <com.google.android.flexbox.FlexboxLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:flexDirection="column"
                app:justifyContent="center"
                app:alignItems="center">

            <ImageView
                    android:id="@+id/logo"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:src="@drawable/logo"
                    android:contentDescription="@string/app_logo" />

            <TextView
                    android:id="@+id/welcome_message"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/welcome"
                    android:textSize="30sp"
                    android:textColor="@color/L1_text_primary"
                    android:layout_marginBottom="8dp"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:fontFamily="sans-serif" />

            <TextView
                    android:id="@+id/subtitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/welcome_description"
                    android:textSize="21sp"
                    android:textColor="@color/L1_text_secondary"
                    android:layout_marginBottom="24dp"
                    android:gravity="center" />
        </com.google.android.flexbox.FlexboxLayout>

        <com.google.android.flexbox.FlexboxLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:flexDirection="column"
                app:alignItems="center"
                android:padding="15dp">

            <com.smartplant.smartplantandroid.main.ui.items.button.CustomButton
                    android:id="@+id/login_button"
                    android:layout_width="match_parent"
                    android:layout_height="43dp"
                    android:text="@string/login_action"
                    android:layout_marginBottom="10dp" />

            <com.smartplant.smartplantandroid.main.ui.items.button.CustomButton
                    android:id="@+id/register_button"
                    android:layout_width="match_parent"
                    android:layout_height="43dp"
                    android:text="@string/register_action" />
        </com.google.android.flexbox.FlexboxLayout>
    </com.google.android.flexbox.FlexboxLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
