<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        android:background="@android:color/white">
    <com.google.android.flexbox.FlexboxLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:flexDirection="column"
            android:padding="20dp"
            app:alignItems="center"
            app:justifyContent="space_between">
        <com.google.android.flexbox.FlexboxLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:flexDirection="column"
                android:layout_marginBottom="20dp">
            <com.google.android.flexbox.FlexboxLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:flexDirection="column"
                    app:alignItems="center"
                    android:layout_marginBottom="20dp">
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/device_add"
                        android:textSize="24sp"
                        android:textStyle="bold"
                        android:layout_gravity="center"
                        android:textColor="@color/L1_text_primary"
                        android:textAlignment="center"
                        android:layout_marginBottom="5dp"/>

                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/specify_device_username"
                        android:textSize="13sp"
                        android:textStyle="bold"
                        android:layout_gravity="center"
                        android:textColor="@color/L1_text_secondary"
                        android:textAlignment="center"
                        android:layout_marginHorizontal="20dp"/>
            </com.google.android.flexbox.FlexboxLayout>
            <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:hintTextColor="@color/L1_text_primary"
                    app:helperTextTextColor="@color/L1_text_primary">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/device_username_input"
                        android:inputType="text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/device_username"
                        android:textColorHint="@color/L1_text_secondary"
                        android:textColor="@color/L1_text_primary"/>
            </com.google.android.material.textfield.TextInputLayout>
        </com.google.android.flexbox.FlexboxLayout>

        <com.smartplant.smartplantandroid.main.ui.items.button.CustomButton
                android:id="@+id/request_device_add_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/send_device_add_request"
                android:layout_marginTop="10dp"/>
    </com.google.android.flexbox.FlexboxLayout>
</LinearLayout>