<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/auth_activity"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".main.ui.views.auth.AuthActivity"
        android:background="@color/L1_background_primary">

    <!-- Main -->
    <com.google.android.flexbox.FlexboxLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:flexDirection="column"
            app:justifyContent="space_between"
            app:alignItems="center">

        <!-- Main content block -->
        <com.google.android.flexbox.FlexboxLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:flexDirection="column"
                app:alignItems="center"
                android:layout_marginTop="60dp">

            <!-- Title -->
            <com.google.android.flexbox.FlexboxLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="40dp"
                    app:flexDirection="column"
                    app:alignItems="center">

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/app_name"
                        android:textSize="28sp"
                        android:textColor="@color/L1_text_primary"
                        android:layout_marginBottom="8dp"
                        android:gravity="center"
                        android:textStyle="bold"
                        android:fontFamily="sans-serif" />

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/welcome_description"
                        android:textSize="15sp"
                        android:textColor="@color/L1_text_secondary"
                        android:gravity="center" />
            </com.google.android.flexbox.FlexboxLayout>

            <!-- Data -->
            <com.google.android.flexbox.FlexboxLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:flexDirection="column"
                    app:justifyContent="space_between"
                    android:padding="15dp">

                <!-- Menu -->
                <com.google.android.flexbox.FlexboxLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:flexDirection="row"
                        app:justifyContent="center"
                        android:layout_marginBottom="10dp">

                    <com.smartplant.smartplantandroid.main.ui.items.button.CustomButton
                            android:id="@+id/login_button"
                            android:layout_width="match_parent"
                            android:layout_height="43dp"
                            android:text="@string/login"
                            android:layout_marginEnd="5dp" />

                    <com.smartplant.smartplantandroid.main.ui.items.button.CustomButton
                            android:id="@+id/register_button"
                            android:layout_width="match_parent"
                            android:layout_height="43dp"
                            android:text="@string/register"
                            android:layout_marginStart="5dp" />
                </com.google.android.flexbox.FlexboxLayout>

                <!-- Fragment -->
                <androidx.fragment.app.FragmentContainerView
                        android:id="@+id/auth_fragment_container"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
            </com.google.android.flexbox.FlexboxLayout>
        </com.google.android.flexbox.FlexboxLayout>

        <!-- Submit block -->
        <com.google.android.flexbox.FlexboxLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:flexDirection="column"
                android:padding="15dp">
            <com.smartplant.smartplantandroid.main.ui.items.button.CustomButton
                    android:id="@+id/submit_button"
                    android:layout_width="match_parent"
                    android:layout_height="43dp"/>
        </com.google.android.flexbox.FlexboxLayout>
    </com.google.android.flexbox.FlexboxLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
